...
"Litecoin" = "Litecoin";

"OKCoin" = "OKCoin";

"Ripple" = "Ripple";

"alerts.title" = "Alerts";

"color.candlestick.negative" = "#cb4646";

"color.candlestick.positive" = "#01b17b";

"color.percentage.negative" = "#ef4242";
...
